Change jsx transpiler to babel

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<div id="container"></div>
 	</body>
 	<script>
-		require('node-jsx').install({harmony: true, extension: '.jsx'});
+		require('babel/register');
 		require('./app/main.jsx');
 	</script>
 </html>
