Appy es6 with babel

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,6 @@
 		<div id="container"></div>
 	</body>
 	<script>
-		require('babel/register');
-		require('./app/main.jsx');
+		require('./components/mainview.js');
 	</script>
 </html>
